# mm-ptx-py

./: CITATION.cff  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml
examples/: README.md  compiler_helper.py  stack_ptx_default_types.py  stack_ptx_extended_types.py
examples/fun/: generator_instructions.py  generator_string.py  helpers.py
examples/fun/domain_coloring/: domain_coloring.py
examples/fun/domain_coloring_random/: domain_coloring_random.py
examples/ptx_inject/: 00_simple.py  01_two_sites.py
examples/stack_ptx/: 00_simple.py  01_routines.py  02_store_load.py  test.py
examples/stack_ptx_inject/: 00_simple.py  01_clock.py  01_two_sites.py  02_clock.py
src/bindings/: ptx_inject.h  ptx_inject_bindings.cpp  ptx_inject_new.h  stack_ptx.h  stack_ptx_bindings.cpp
src/mm_ptx/: __init__.py  include.py  stack_ptx_default_types.py
src/mm_ptx/include/: ptx_inject.h  stack_ptx.h
src/mm_ptx/ptx_inject/: __init__.py  ptx_inject.py
src/mm_ptx/ptx_inject/_impl/: __init__.py
src/mm_ptx/stack_ptx/: __init__.py  stack_ptx.py
src/mm_ptx/stack_ptx/_impl/: __init__.py
tests/: test_ptx_inject.py  test_stack_ptx_inject.py
