[build-system]
requires = ["scikit-build-core>=0.9.0", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mm-ptx"
version = "0.1.0"
authors = [{name = "MetaMachines LLC", email = "contact@metamachines.co"}]
description = "High-performance C adder wrapped in Python with Nanobind"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MetaMachines/mm-ptx-py"
Repository = "https://github.com/MetaMachines/mm-ptx-py.git"

[tool.scikit-build]
cmake.version = ">=3.15" # Required for Nanobind
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DBUILD_PYTHON_BINDINGS=ON"
]
wheel.packages = ["src/mm_ptx"]